--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Its Muzammil Peerzada's Repo</title>
+<title>It.s Muzammil Peerzada's Repo</title>
 </head>
 <body>
 
