--- a/index.html
+++ b/index.html
@@ -18,6 +18,23 @@
   <br> https://www.instagram.com/i_mpeerzada <br>
 
 
+
+<br>
+
+<h2>HTML Forms</h2>
+
+<form action="/action_page.php">
+  <label for="fname">First name:</label><br>
+  <input type="text" id="fname" name="fname" value="Muzammil"><br>
+  <label for="lname">Last name:</label><br>
+  <input type="text" id="lname" name="lname" value="Peerzada"><br><br>
+  <inputinput type="submit" value="Submit">
+</form> 
+
+<p>If you click the "Submit" button, the form-data will be sent to a page called "/action_page.php".</p>
+
+
+
 </body>
 </html>
 
