--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
   <input type="text" id="fname" name="fname" value="Muzammil"><br>
   <label for="lname">Last name:</label><br>
   <input type="text" id="lname" name="lname" value="Peerzada"><br><br>
-  <inputinput type="submit" value="Submit">
+  <input type="submit" value="Submit">
 </form> 
 
 <p>If you click the "Submit" button, the form-data will be sent to a page called "/action_page.php".</p>
