--- a/index.html
+++ b/index.html
@@ -21,17 +21,17 @@
 
 <br>
 
-<h2>HTML Forms</h2>
+<h2>To reach me</h2>
 
-<form action="/action_page.php">
+<form action="/https://www.linkedin.com/in/iampeerzada">
   <label for="fname">First name:</label><br>
-  <input type="text" id="fname" name="fname" value="Muzammil"><br>
+  <input type="text" id="fname" name="fname" value="Insert Your First Name"><br>
   <label for="lname">Last name:</label><br>
-  <input type="text" id="lname" name="lname" value="Peerzada"><br><br>
+  <input type="text" id="lname" name="lname" value="Insert Your Last Name"><br><br>
   <input type="submit" value="Submit">
 </form> 
 
-<p>If you click the "Submit" button, the form-data will be sent to a page called "/action_page.php".</p>
+<p>If you click the "Submit" button,you will redirect to LinkedIn Profile.</p>
 
 
 
