--- a/index.html
+++ b/index.html
@@ -23,13 +23,20 @@
 
 <h2>To reach me</h2>
 
-<form action="/https://www.linkedin.com/in/iampeerzada">
+<form>
   <label for="fname">First name:</label><br>
   <input type="text" id="fname" name="fname" value="Insert Your First Name"><br>
   <label for="lname">Last name:</label><br>
   <input type="text" id="lname" name="lname" value="Insert Your Last Name"><br><br>
   <input type="submit" value="Submit">
 </form> 
+<button onclick="myFunction()">Submit</button>
+
+<script>
+function myFunction() {
+  location.replace("https://www.w3schools.com")
+}
+</script>
 
 <p>If you click the "Submit" button,you will redirect to LinkedIn Profile.</p>
 
