--- a/index.html
+++ b/index.html
@@ -28,13 +28,12 @@
   <input type="text" id="fname" name="fname" value="Insert Your First Name"><br>
   <label for="lname">Last name:</label><br>
   <input type="text" id="lname" name="lname" value="Insert Your Last Name"><br><br>
-  <input type="submit" value="Submit">
 </form> 
 <button onclick="myFunction()">Submit</button>
 
 <script>
 function myFunction() {
-  location.replace("https://www.w3schools.com")
+  location.replace("https://www.linkedin.com/in/iampeerzada")
 }
 </script>
 
