--- a/index.html
+++ b/index.html
@@ -45,9 +45,9 @@ function myFunction() {
 </body>
 </html>
 
-<script src="https://platform.linkedin.com/badges/js/profile.js" async defer type="text/javascript"></script>
-
+<script src="https://platform.linkedin.com/badges/js/profile.js" async defer type="text/javascript">
 <div class="badge-base LI-profile-badge" data-locale="en_US" data-size="medium" data-theme="dark" data-type="VERTICAL" data-vanity="iampeerzada" data- version="v1"> <a class="badge-base_link LI-simple-link" href="https://in.linkedin.com/in/iampeerzada?trk=profile-badge">Muzammil P.</a> </div>
+</script>
 
 
 
