--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
 
 <form>
   <label for="fname">First name:</label><br>
-  <input type="text" id="fname" name="fname" value="Insert Your First Name"><br>
+  <input type="text" id="fname" name="fname" value=""><br>
   <label for="lname">Last name:</label><br>
-  <input type="text" id="lname" name="lname" value="Insert Your Last Name"><br><br>
+  <input type="text" id="lname" name="lname" value=""><br><br>
 </form> 
 <button onclick="myFunction()">Submit</button>
 
@@ -41,12 +41,6 @@ function myFunction() {
 <p>If you click the "Submit" button,you will redirect to LinkedIn Profile.</p>
 
 
-
-
-
-
-
-<div class="badge-base LI-profile-badge" data-locale="en_US" data-size="medium" data-theme="dark" data-type="VERTICAL" data-vanity="iampeerzada" data- version="v1"> <a class="badge-base_link LI-simple-link" href="https://in.linkedin.com/in/iampeerzada?trk=profile-badge">Muzammil P.</a> </div>
 
 
 </body>
